upload method replaced with base64 encoded file
