# gen/go/api/proto/v1/storage_service.pb.go
@@ -22,6 +22,54 @@ const (
 	_ = protoimpl.EnforceVersion(protoimpl.MaxVersion - 20)
 )
 
+// I know that its stupid, I will redo this later
+type Base64FileUploadRequest struct {
+	state         protoimpl.MessageState
+	sizeCache     protoimpl.SizeCache
+	unknownFields protoimpl.UnknownFields
+
+	Base64FileEncoded string `protobuf:"bytes,1,opt,name=base64_file_encoded,json=base64FileEncoded,proto3" json:"base64_file_encoded,omitempty"`
+}
+
+func (x *Base64FileUploadRequest) Reset() {
+	*x = Base64FileUploadRequest{}
+	if protoimpl.UnsafeEnabled {
+		mi := &file_api_proto_v1_storage_service_proto_msgTypes[0]
+		ms := protoimpl.X.MessageStateOf(protoimpl.Pointer(x))
+		ms.StoreMessageInfo(mi)
+	}
+}
+
+func (x *Base64FileUploadRequest) String() string {
+	return protoimpl.X.MessageStringOf(x)
+}
+
+func (*Base64FileUploadRequest) ProtoMessage() {}
+
+func (x *Base64FileUploadRequest) ProtoReflect() protoreflect.Message {
+	mi := &file_api_proto_v1_storage_service_proto_msgTypes[0]
+	if protoimpl.UnsafeEnabled && x != nil {
+		ms := protoimpl.X.MessageStateOf(protoimpl.Pointer(x))
+		if ms.LoadMessageInfo() == nil {
+			ms.StoreMessageInfo(mi)
+		}
+		return ms
+	}
+	return mi.MessageOf(x)
+}
+
+// Deprecated: Use Base64FileUploadRequest.ProtoReflect.Descriptor instead.
+func (*Base64FileUploadRequest) Descriptor() ([]byte, []int) {
+	return file_api_proto_v1_storage_service_proto_rawDescGZIP(), []int{0}
+}
+
+func (x *Base64FileUploadRequest) GetBase64FileEncoded() string {
+	if x != nil {
+		return x.Base64FileEncoded
+	}
+	return ""
+}
+
 type FileUploadResponse struct {
 	state         protoimpl.MessageState
 	sizeCache     protoimpl.SizeCache
@@ -35,7 +83,7 @@ type FileUploadResponse struct {
 func (x *FileUploadResponse) Reset() {
 	*x = FileUploadResponse{}
 	if protoimpl.UnsafeEnabled {
-		mi := &file_api_proto_v1_storage_service_proto_msgTypes[0]
+		mi := &file_api_proto_v1_storage_service_proto_msgTypes[1]
 		ms := protoimpl.X.MessageStateOf(protoimpl.Pointer(x))
 		ms.StoreMessageInfo(mi)
 	}
@@ -48,7 +96,7 @@ func (x *FileUploadResponse) String() string {
 func (*FileUploadResponse) ProtoMessage() {}
 
 func (x *FileUploadResponse) ProtoReflect() protoreflect.Message {
-	mi := &file_api_proto_v1_storage_service_proto_msgTypes[0]
+	mi := &file_api_proto_v1_storage_service_proto_msgTypes[1]
 	if protoimpl.UnsafeEnabled && x != nil {
 		ms := protoimpl.X.MessageStateOf(protoimpl.Pointer(x))
 		if ms.LoadMessageInfo() == nil {
@@ -61,7 +109,7 @@ func (x *FileUploadResponse) ProtoReflect() protoreflect.Message {
 
 // Deprecated: Use FileUploadResponse.ProtoReflect.Descriptor instead.
 func (*FileUploadResponse) Descriptor() ([]byte, []int) {
-	return file_api_proto_v1_storage_service_proto_rawDescGZIP(), []int{0}
+	return file_api_proto_v1_storage_service_proto_rawDescGZIP(), []int{1}
 }
 
 func (x *FileUploadResponse) GetUuid() string {
@@ -96,7 +144,7 @@ type GetRawFileRequest struct {
 func (x *GetRawFileRequest) Reset() {
 	*x = GetRawFileRequest{}
 	if protoimpl.UnsafeEnabled {
-		mi := &file_api_proto_v1_storage_service_proto_msgTypes[1]
+		mi := &file_api_proto_v1_storage_service_proto_msgTypes[2]
 		ms := protoimpl.X.MessageStateOf(protoimpl.Pointer(x))
 		ms.StoreMessageInfo(mi)
 	}
@@ -109,7 +157,7 @@ func (x *GetRawFileRequest) String() string {
 func (*GetRawFileRequest) ProtoMessage() {}
 
 func (x *GetRawFileRequest) ProtoReflect() protoreflect.Message {
-	mi := &file_api_proto_v1_storage_service_proto_msgTypes[1]
+	mi := &file_api_proto_v1_storage_service_proto_msgTypes[2]
 	if protoimpl.UnsafeEnabled && x != nil {
 		ms := protoimpl.X.MessageStateOf(protoimpl.Pointer(x))
 		if ms.LoadMessageInfo() == nil {
@@ -122,7 +170,7 @@ func (x *GetRawFileRequest) ProtoReflect() protoreflect.Message {
 
 // Deprecated: Use GetRawFileRequest.ProtoReflect.Descriptor instead.
 func (*GetRawFileRequest) Descriptor() ([]byte, []int) {
-	return file_api_proto_v1_storage_service_proto_rawDescGZIP(), []int{1}
+	return file_api_proto_v1_storage_service_proto_rawDescGZIP(), []int{2}
 }
 
 func (x *GetRawFileRequest) GetUuid() string {
@@ -142,33 +190,40 @@ var file_api_proto_v1_storage_service_proto_rawDesc = []byte{
 	0x65, 0x2f, 0x61, 0x70, 0x69, 0x2f, 0x61, 0x6e, 0x6e, 0x6f, 0x74, 0x61, 0x74, 0x69, 0x6f, 0x6e,
 	0x73, 0x2e, 0x70, 0x72, 0x6f, 0x74, 0x6f, 0x1a, 0x19, 0x67, 0x6f, 0x6f, 0x67, 0x6c, 0x65, 0x2f,
 	0x61, 0x70, 0x69, 0x2f, 0x68, 0x74, 0x74, 0x70, 0x62, 0x6f, 0x64, 0x79, 0x2e, 0x70, 0x72, 0x6f,
-	0x74, 0x6f, 0x22, 0x5a, 0x0a, 0x12, 0x46, 0x69, 0x6c, 0x65, 0x55, 0x70, 0x6c, 0x6f, 0x61, 0x64,
-	0x52, 0x65, 0x73, 0x70, 0x6f, 0x6e, 0x73, 0x65, 0x12, 0x12, 0x0a, 0x04, 0x75, 0x75, 0x69, 0x64,
-	0x18, 0x01, 0x20, 0x01, 0x28, 0x09, 0x52, 0x04, 0x75, 0x75, 0x69, 0x64, 0x12, 0x1c, 0x0a, 0x09,
-	0x65, 0x78, 0x74, 0x65, 0x6e, 0x73, 0x69, 0x6f, 0x6e, 0x18, 0x02, 0x20, 0x01, 0x28, 0x09, 0x52,
-	0x09, 0x65, 0x78, 0x74, 0x65, 0x6e, 0x73, 0x69, 0x6f, 0x6e, 0x12, 0x12, 0x0a, 0x04, 0x73, 0x69,
-	0x7a, 0x65, 0x18, 0x03, 0x20, 0x01, 0x28, 0x0d, 0x52, 0x04, 0x73, 0x69, 0x7a, 0x65, 0x22, 0x27,
-	0x0a, 0x11, 0x47, 0x65, 0x74, 0x52, 0x61, 0x77, 0x46, 0x69, 0x6c, 0x65, 0x52, 0x65, 0x71, 0x75,
-	0x65, 0x73, 0x74, 0x12, 0x12, 0x0a, 0x04, 0x75, 0x75, 0x69, 0x64, 0x18, 0x01, 0x20, 0x01, 0x28,
-	0x09, 0x52, 0x04, 0x75, 0x75, 0x69, 0x64, 0x32, 0xec, 0x01, 0x0a, 0x11, 0x53, 0x74, 0x6f, 0x72,
-	0x61, 0x67, 0x65, 0x53, 0x65, 0x72, 0x76, 0x69, 0x63, 0x65, 0x41, 0x50, 0x49, 0x12, 0x69, 0x0a,
-	0x0a, 0x55, 0x70, 0x6c, 0x6f, 0x61, 0x64, 0x46, 0x69, 0x6c, 0x65, 0x12, 0x14, 0x2e, 0x67, 0x6f,
-	0x6f, 0x67, 0x6c, 0x65, 0x2e, 0x61, 0x70, 0x69, 0x2e, 0x48, 0x74, 0x74, 0x70, 0x42, 0x6f, 0x64,
-	0x79, 0x1a, 0x27, 0x2e, 0x73, 0x74, 0x6f, 0x72, 0x61, 0x67, 0x65, 0x5f, 0x73, 0x65, 0x72, 0x76,
-	0x69, 0x63, 0x65, 0x5f, 0x61, 0x70, 0x69, 0x2e, 0x46, 0x69, 0x6c, 0x65, 0x55, 0x70, 0x6c, 0x6f,
-	0x61, 0x64, 0x52, 0x65, 0x73, 0x70, 0x6f, 0x6e, 0x73, 0x65, 0x22, 0x1a, 0x82, 0xd3, 0xe4, 0x93,
-	0x02, 0x14, 0x22, 0x0f, 0x2f, 0x61, 0x70, 0x69, 0x2f, 0x76, 0x31, 0x2f, 0x73, 0x74, 0x6f, 0x72,
-	0x61, 0x67, 0x65, 0x3a, 0x01, 0x2a, 0x28, 0x01, 0x12, 0x6c, 0x0a, 0x0a, 0x47, 0x65, 0x74, 0x52,
-	0x61, 0x77, 0x46, 0x69, 0x6c, 0x65, 0x12, 0x26, 0x2e, 0x73, 0x74, 0x6f, 0x72, 0x61, 0x67, 0x65,
-	0x5f, 0x73, 0x65, 0x72, 0x76, 0x69, 0x63, 0x65, 0x5f, 0x61, 0x70, 0x69, 0x2e, 0x47, 0x65, 0x74,
-	0x52, 0x61, 0x77, 0x46, 0x69, 0x6c, 0x65, 0x52, 0x65, 0x71, 0x75, 0x65, 0x73, 0x74, 0x1a, 0x14,
-	0x2e, 0x67, 0x6f, 0x6f, 0x67, 0x6c, 0x65, 0x2e, 0x61, 0x70, 0x69, 0x2e, 0x48, 0x74, 0x74, 0x70,
-	0x42, 0x6f, 0x64, 0x79, 0x22, 0x1e, 0x82, 0xd3, 0xe4, 0x93, 0x02, 0x18, 0x12, 0x16, 0x2f, 0x61,
-	0x70, 0x69, 0x2f, 0x76, 0x31, 0x2f, 0x73, 0x74, 0x6f, 0x72, 0x61, 0x67, 0x65, 0x2f, 0x7b, 0x75,
-	0x75, 0x69, 0x64, 0x7d, 0x30, 0x01, 0x42, 0x29, 0x5a, 0x27, 0x67, 0x69, 0x74, 0x68, 0x75, 0x62,
-	0x2e, 0x63, 0x6f, 0x6d, 0x2f, 0x6d, 0x79, 0x2d, 0x65, 0x70, 0x6f, 0x63, 0x68, 0x2f, 0x73, 0x74,
-	0x6f, 0x72, 0x61, 0x67, 0x65, 0x5f, 0x73, 0x65, 0x72, 0x76, 0x69, 0x63, 0x65, 0x2f, 0x67, 0x65,
-	0x6e, 0x62, 0x06, 0x70, 0x72, 0x6f, 0x74, 0x6f, 0x33,
+	0x74, 0x6f, 0x22, 0x49, 0x0a, 0x17, 0x42, 0x61, 0x73, 0x65, 0x36, 0x34, 0x46, 0x69, 0x6c, 0x65,
+	0x55, 0x70, 0x6c, 0x6f, 0x61, 0x64, 0x52, 0x65, 0x71, 0x75, 0x65, 0x73, 0x74, 0x12, 0x2e, 0x0a,
+	0x13, 0x62, 0x61, 0x73, 0x65, 0x36, 0x34, 0x5f, 0x66, 0x69, 0x6c, 0x65, 0x5f, 0x65, 0x6e, 0x63,
+	0x6f, 0x64, 0x65, 0x64, 0x18, 0x01, 0x20, 0x01, 0x28, 0x09, 0x52, 0x11, 0x62, 0x61, 0x73, 0x65,
+	0x36, 0x34, 0x46, 0x69, 0x6c, 0x65, 0x45, 0x6e, 0x63, 0x6f, 0x64, 0x65, 0x64, 0x22, 0x5a, 0x0a,
+	0x12, 0x46, 0x69, 0x6c, 0x65, 0x55, 0x70, 0x6c, 0x6f, 0x61, 0x64, 0x52, 0x65, 0x73, 0x70, 0x6f,
+	0x6e, 0x73, 0x65, 0x12, 0x12, 0x0a, 0x04, 0x75, 0x75, 0x69, 0x64, 0x18, 0x01, 0x20, 0x01, 0x28,
+	0x09, 0x52, 0x04, 0x75, 0x75, 0x69, 0x64, 0x12, 0x1c, 0x0a, 0x09, 0x65, 0x78, 0x74, 0x65, 0x6e,
+	0x73, 0x69, 0x6f, 0x6e, 0x18, 0x02, 0x20, 0x01, 0x28, 0x09, 0x52, 0x09, 0x65, 0x78, 0x74, 0x65,
+	0x6e, 0x73, 0x69, 0x6f, 0x6e, 0x12, 0x12, 0x0a, 0x04, 0x73, 0x69, 0x7a, 0x65, 0x18, 0x03, 0x20,
+	0x01, 0x28, 0x0d, 0x52, 0x04, 0x73, 0x69, 0x7a, 0x65, 0x22, 0x27, 0x0a, 0x11, 0x47, 0x65, 0x74,
+	0x52, 0x61, 0x77, 0x46, 0x69, 0x6c, 0x65, 0x52, 0x65, 0x71, 0x75, 0x65, 0x73, 0x74, 0x12, 0x12,
+	0x0a, 0x04, 0x75, 0x75, 0x69, 0x64, 0x18, 0x01, 0x20, 0x01, 0x28, 0x09, 0x52, 0x04, 0x75, 0x75,
+	0x69, 0x64, 0x32, 0x97, 0x02, 0x0a, 0x11, 0x53, 0x74, 0x6f, 0x72, 0x61, 0x67, 0x65, 0x53, 0x65,
+	0x72, 0x76, 0x69, 0x63, 0x65, 0x41, 0x50, 0x49, 0x12, 0x93, 0x01, 0x0a, 0x17, 0x55, 0x70, 0x6c,
+	0x6f, 0x61, 0x64, 0x42, 0x61, 0x73, 0x65, 0x36, 0x34, 0x45, 0x6e, 0x63, 0x6f, 0x64, 0x65, 0x64,
+	0x46, 0x69, 0x6c, 0x65, 0x12, 0x2c, 0x2e, 0x73, 0x74, 0x6f, 0x72, 0x61, 0x67, 0x65, 0x5f, 0x73,
+	0x65, 0x72, 0x76, 0x69, 0x63, 0x65, 0x5f, 0x61, 0x70, 0x69, 0x2e, 0x42, 0x61, 0x73, 0x65, 0x36,
+	0x34, 0x46, 0x69, 0x6c, 0x65, 0x55, 0x70, 0x6c, 0x6f, 0x61, 0x64, 0x52, 0x65, 0x71, 0x75, 0x65,
+	0x73, 0x74, 0x1a, 0x27, 0x2e, 0x73, 0x74, 0x6f, 0x72, 0x61, 0x67, 0x65, 0x5f, 0x73, 0x65, 0x72,
+	0x76, 0x69, 0x63, 0x65, 0x5f, 0x61, 0x70, 0x69, 0x2e, 0x46, 0x69, 0x6c, 0x65, 0x55, 0x70, 0x6c,
+	0x6f, 0x61, 0x64, 0x52, 0x65, 0x73, 0x70, 0x6f, 0x6e, 0x73, 0x65, 0x22, 0x21, 0x82, 0xd3, 0xe4,
+	0x93, 0x02, 0x1b, 0x22, 0x16, 0x2f, 0x61, 0x70, 0x69, 0x2f, 0x76, 0x31, 0x2f, 0x73, 0x74, 0x6f,
+	0x72, 0x61, 0x67, 0x65, 0x2f, 0x62, 0x61, 0x73, 0x65, 0x36, 0x34, 0x3a, 0x01, 0x2a, 0x12, 0x6c,
+	0x0a, 0x0a, 0x47, 0x65, 0x74, 0x52, 0x61, 0x77, 0x46, 0x69, 0x6c, 0x65, 0x12, 0x26, 0x2e, 0x73,
+	0x74, 0x6f, 0x72, 0x61, 0x67, 0x65, 0x5f, 0x73, 0x65, 0x72, 0x76, 0x69, 0x63, 0x65, 0x5f, 0x61,
+	0x70, 0x69, 0x2e, 0x47, 0x65, 0x74, 0x52, 0x61, 0x77, 0x46, 0x69, 0x6c, 0x65, 0x52, 0x65, 0x71,
+	0x75, 0x65, 0x73, 0x74, 0x1a, 0x14, 0x2e, 0x67, 0x6f, 0x6f, 0x67, 0x6c, 0x65, 0x2e, 0x61, 0x70,
+	0x69, 0x2e, 0x48, 0x74, 0x74, 0x70, 0x42, 0x6f, 0x64, 0x79, 0x22, 0x1e, 0x82, 0xd3, 0xe4, 0x93,
+	0x02, 0x18, 0x12, 0x16, 0x2f, 0x61, 0x70, 0x69, 0x2f, 0x76, 0x31, 0x2f, 0x73, 0x74, 0x6f, 0x72,
+	0x61, 0x67, 0x65, 0x2f, 0x7b, 0x75, 0x75, 0x69, 0x64, 0x7d, 0x30, 0x01, 0x42, 0x29, 0x5a, 0x27,
+	0x67, 0x69, 0x74, 0x68, 0x75, 0x62, 0x2e, 0x63, 0x6f, 0x6d, 0x2f, 0x6d, 0x79, 0x2d, 0x65, 0x70,
+	0x6f, 0x63, 0x68, 0x2f, 0x73, 0x74, 0x6f, 0x72, 0x61, 0x67, 0x65, 0x5f, 0x73, 0x65, 0x72, 0x76,
+	0x69, 0x63, 0x65, 0x2f, 0x67, 0x65, 0x6e, 0x62, 0x06, 0x70, 0x72, 0x6f, 0x74, 0x6f, 0x33,
 }
 
 var (
@@ -183,17 +238,18 @@ func file_api_proto_v1_storage_service_proto_rawDescGZIP() []byte {
 	return file_api_proto_v1_storage_service_proto_rawDescData
 }
 
-var file_api_proto_v1_storage_service_proto_msgTypes = make([]protoimpl.MessageInfo, 2)
+var file_api_proto_v1_storage_service_proto_msgTypes = make([]protoimpl.MessageInfo, 3)
 var file_api_proto_v1_storage_service_proto_goTypes = []interface{}{
-	(*FileUploadResponse)(nil), // 0: storage_service_api.FileUploadResponse
-	(*GetRawFileRequest)(nil),  // 1: storage_service_api.GetRawFileRequest
-	(*httpbody.HttpBody)(nil),  // 2: google.api.HttpBody
+	(*Base64FileUploadRequest)(nil), // 0: storage_service_api.Base64FileUploadRequest
+	(*FileUploadResponse)(nil),      // 1: storage_service_api.FileUploadResponse
+	(*GetRawFileRequest)(nil),       // 2: storage_service_api.GetRawFileRequest
+	(*httpbody.HttpBody)(nil),       // 3: google.api.HttpBody
 }
 var file_api_proto_v1_storage_service_proto_depIdxs = []int32{
-	2, // 0: storage_service_api.StorageServiceAPI.UploadFile:input_type -> google.api.HttpBody
-	1, // 1: storage_service_api.StorageServiceAPI.GetRawFile:input_type -> storage_service_api.GetRawFileRequest
-	0, // 2: storage_service_api.StorageServiceAPI.UploadFile:output_type -> storage_service_api.FileUploadResponse
-	2, // 3: storage_service_api.StorageServiceAPI.GetRawFile:output_type -> google.api.HttpBody
+	0, // 0: storage_service_api.StorageServiceAPI.UploadBase64EncodedFile:input_type -> storage_service_api.Base64FileUploadRequest
+	2, // 1: storage_service_api.StorageServiceAPI.GetRawFile:input_type -> storage_service_api.GetRawFileRequest
+	1, // 2: storage_service_api.StorageServiceAPI.UploadBase64EncodedFile:output_type -> storage_service_api.FileUploadResponse
+	3, // 3: storage_service_api.StorageServiceAPI.GetRawFile:output_type -> google.api.HttpBody
 	2, // [2:4] is the sub-list for method output_type
 	0, // [0:2] is the sub-list for method input_type
 	0, // [0:0] is the sub-list for extension type_name
@@ -208,7 +264,7 @@ func file_api_proto_v1_storage_service_proto_init() {
 	}
 	if !protoimpl.UnsafeEnabled {
 		file_api_proto_v1_storage_service_proto_msgTypes[0].Exporter = func(v interface{}, i int) interface{} {
-			switch v := v.(*FileUploadResponse); i {
+			switch v := v.(*Base64FileUploadRequest); i {
 			case 0:
 				return &v.state
 			case 1:
@@ -220,6 +276,18 @@ func file_api_proto_v1_storage_service_proto_init() {
 			}
 		}
 		file_api_proto_v1_storage_service_proto_msgTypes[1].Exporter = func(v interface{}, i int) interface{} {
+			switch v := v.(*FileUploadResponse); i {
+			case 0:
+				return &v.state
+			case 1:
+				return &v.sizeCache
+			case 2:
+				return &v.unknownFields
+			default:
+				return nil
+			}
+		}
+		file_api_proto_v1_storage_service_proto_msgTypes[2].Exporter = func(v interface{}, i int) interface{} {
 			switch v := v.(*GetRawFileRequest); i {
 			case 0:
 				return &v.state
@@ -238,7 +306,7 @@ func file_api_proto_v1_storage_service_proto_init() {
 			GoPackagePath: reflect.TypeOf(x{}).PkgPath(),
 			RawDescriptor: file_api_proto_v1_storage_service_proto_rawDesc,
 			NumEnums:      0,
-			NumMessages:   2,
+			NumMessages:   3,
 			NumExtensions: 0,
 			NumServices:   1,
 		},
